data/derived/comb/progs/unify/prog5177.ml.out
Characters 31-51:
  let stringOfList f l = List.map(sepConcat(f, l), l);;
                                 ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
